--- a/artifacts/examples/crd.yaml
+++ b/artifacts/examples/crd.yaml
@@ -1,11 +1,11 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: foos.samplecontroller.k8s.io
+  name: serviceroutes.networking.dell
 spec:
-  group: samplecontroller.k8s.io
+  group: networking.dell
   version: v1alpha1
   names:
-    kind: Foo
-    plural: foos
+    kind: ServiceRoute
+    plural: serviceroutes
   scope: Namespaced
