--- a/artifacts/examples/example-foo2.yaml
+++ b/artifacts/examples/example-foo2.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.dell/v1alpha1
 kind: ServiceRoute
 metadata:
-  name: thanos-querier
+  name: prometheus
   namespace: kafka-prom
 spec:
   routeName: example-route
