--- a/artifacts/examples/istio-record.yaml
+++ b/artifacts/examples/istio-record.yaml
@@ -1,4 +1,4 @@
-apiVersion: networking.dell/v1alpha1
+apiVersion: networking.dcb/v1alpha1
 kind: ServiceRoute
 metadata:
   name: cpe-tools02-s1-pks--kafka-prom--thanos-querier
